# whisper-shorts-sub

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg
scripts/: run_app.py
src/whisper_shorts_subs/: __init__.py  app.py  audio.py  subtitle.py  transcribe.py  util.py
test/whisper-shorts-subs/: test_util.py  test_version.py
