# Adapted from setuptools docs https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = whisper_shorts_subs
version = file: src/whisper_shorts_subs/VERSION
authors = Ryan Baten
author_email =
description = Shorts-style video editor with whisper transcriptions.
long_description = file: README.rst
license = MIT License
#license_files = LICENSE  # If not specified, defaults to LICEN[CS]E*, COPYING*, NOTICE*, AUTHORS*
classifiers =
    Programming Language :: Python :: 3


[options]
zip_safe = False
# Specify package data via MANIFEST.in file
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    customtkinter
    faster-whisper
    moviepy
    numpy
    opencv-python
    tk
    tqdm
# See the setuptools documentation https://setuptools.pypa.io/en/latest/userguide/dependency_management.html
# for examples of how to use install_requires.
# ex: importlib-metadata; python_version<"3.8"


[options.packages.find]
where=src

# Use the following if the package installs cli commands
# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function


# Installing extras is done via installing package[extra]
# ex: pip install whisper_shorts_subs[dev]
[options.extras_require]
dev =
    black
    pytest
    ruff

[options.entry_points]
gui_scripts =
    whisper-subs=whisper_shorts_subs:run_app